Implement new database schema and refactor API entities
- Introduced a new database schema as per the design in newdatabase.drawio, including tables for business logic (zbrtstk) and platform (system).
- Refactored EntityDTO to simplify its structure and removed the EntityId and JsonMapConverter classes.
- Added new entity classes: ActionEntity, EntityTypeEntity, PlanEntity, PlanStepEntity, and UIBindingEntity to represent the new schema.
- Updated the PlanMapper to handle conversions between domain models and the new entity classes.
- Removed the old EntityRepository and replaced it with specific repositories for actions, entity types, plans, and UI bindings.
- Adjusted DatabaseResolver to work with the new repository structure and entity types.